# 1shsapp

./: .env.template  Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: urls.py  views.py
mysite/shopapp/templates/shopapp/: index.html
