[tool.poetry]
name = "first-web-app"
version = "0.1.0"
description = ""
authors = ["dodo <yannyll@mail.ru>"]
readme = "README.md"
packages = [{include = "first_web_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
django-filter = "^23.2"
django-debug-toolbar = "^4.2.0"
sentry-sdk = "^1.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
